--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -82,6 +82,34 @@ LHO:
             spacing:          geometric 
             df:               1./4.    
             npoints:          5000 
+LLO_O1:
+            lat:              30.56 * np.pi / 180.
+            lon:              -90.77 * np.pi / 180.
+            opening_angle:    np.pi / 2.
+            azimuth:          197.7 * np.pi / 180.
+            psd_data:         LHO_O1_fit_psd.txt
+            duty_factor:      0.85
+            detector_class:   earthL
+            plotrange:        10, 1000, 1e-25, 1e-20
+            fmin:             20
+            fmax:             512
+            spacing:          geometric 
+            df:               1./4.    
+            npoints:          5000    
+LHO_O1:
+            lat:              46.46 * np.pi / 180.
+            lon:              -119.4 * np.pi / 180.
+            opening_angle:    np.pi / 2.
+            azimuth:          126. * np.pi / 180.
+            psd_data:         LHO_O1_fit_psd.txt
+            duty_factor:      0.85
+            detector_class:   earthL
+            plotrange:        10, 1000, 1e-25, 1e-20
+            fmin:             20
+            fmax:             512
+            spacing:          geometric 
+            df:               1./4.    
+            npoints:          5000 
 VIR:
             lat:              43.6 * np.pi / 180.
             lon:              10.5 * np.pi / 180.
